fix: improved emoji-only texts & replies The slight re-jig of element types for Replies support caused emoji-only texts to lose their coolness. Now they're rendered properly in all cases, and even auto-aligned depending on who sent them.

--- a/src/styles.css
+++ b/src/styles.css
@@ -280,12 +280,15 @@ body {
 }
 
 .emoji-only {
-  font-size: 75px;
   /* Typically I recommend against !important, but this is the only element in `msg-them` we're force-overriding */
   background: none !important;
   padding-left: 0;
   margin-top: 25px;
   margin-bottom: 25px;
+}
+
+.emoji-only-content {
+  font-size: 75px;
   line-height: 75px;
 }
 
